--- a/登山エネルギー水分量計算.html
+++ b/登山エネルギー水分量計算.html
@@ -152,7 +152,7 @@
             <label for="backpack_weight">ザック重量（kg）:</label>
             <input type="number" id="backpack_weight" name="backpack_weight" required>
 
-            <label for="dehydration_factor">脱水係数:</label>
+            <label for="dehydration_factor">脱水係数(スピードハイク目安:夏7~8冬5):</label>
             <input type="number" id="dehydration_factor" name="dehydration_factor" value="7" required>
             
             <input type="submit" value="計算">
