--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                 <h2>・計算結果</h2>
                 <p>・推定エネルギー消費量: ${totalEnergy} kcal</p>
                 <p>・推定脱水量: ${totalWater} mL</p>
-                <p>・携行するエネルギーの下限値: ${minimumEnergy} kcal</p>
-                <p>・携行する水分の下限値: ${minimumWaterCarry} mL</p>
+                <p>・携行エネルギー下限値: ${minimumEnergy} kcal</p>
+                <p>・携行水分下限値: ${minimumWaterCarry} mL</p>
             `;
         }
 
