--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <label for="backpack_weight">ザック重量（kg）:</label>
             <input type="number" id="backpack_weight" name="backpack_weight" required>
 
-            <label for="dehydration_factor">脱水係数(speedhike目安：夏7~9 冬5~6):</label>
+            <label for="dehydration_factor">脱水係数(一般登山：5 speedhike目安：夏7~9 冬5~6):</label>
             <input type="number" id="dehydration_factor" name="dehydration_factor" value="7" required>
             
             <input type="submit" value="計算">
